日本語ドキュメントの追加と更新
- README.mdの日本語化
- MCPの学習サマリーとセットアップガイドを追加
- devcontainerの設定を更新
- 変換結果のサンプルファイル（converted.html）を追加

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -48,6 +48,12 @@
 
   "remoteUser": "vscode",
 
+  "mounts": [],
+
+  "containerEnv": {
+    "DEBIAN_FRONTEND": "noninteractive"
+  },
+
   "onCreateCommand": "./.devcontainer/on-create.sh > ~/on-create.log",
 
   "hostRequirements": {
